<resources>
    <string name="app_name">CabaCalc 2</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="button">Button</string>
    <string name="TextView">TextView</string>
    <string name="Hello">WELCOME!</string>
    <string name="Start">START</string>
    <string name="enter_your_information">Enter your information:</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="calculate">CALCULATE</string>
    <string name="fill_all">Enter your full name</string>
    <string name="wrong_date">Wrong date</string>
    <string name="error_1">Leap year, February has 29 days</string>
    <string name="error_2">Non-leap year, February has 28 days</string>
    <string name="error_3">Enter the day correctly</string>
    <string name="birth_day">Date of birth</string>
    <string name="interiorUrgency">Interior Urgency</string>
    <string name="fundamentalTonic">Fundamental Tonic</string>
    <string name="msj_number">Numbers that govern us during life:</string>
    <string name="msj_01">The inner urgency, is how we tend to be, like a zodiac sign, but numerical.</string>
    <string name="msj_01011">It is a symbol of RESPONSIBILITY, creative element, propeller, animator. It imparts power to direct, originality in thinking, interest in the new and unity of thought and action. It demands strength of mind, self-confidence, faith in the means that it is worth and in the aims that are pursued. The secret yearning of these natives tends to develop their own sufficiency so that it shines on its own and radiates light and heat through works that contribute to the moral and material progress of those who use them. They effectively carry out any work that requires initiative, executive aptitude and inventive spirit.</string>
    <string name="msj_01012">Natural Talent: It is related to the Sun. It is a symbol of Need, a principle that urges things to be. In the spiritual it inspires. In the mental it gives unity of thoughts. In the physical it gives unity of action. In the mundane move to start. It makes the person an independent, original thinker, interested in the new and always open to initiative. Your progress depends on the way you apply your natural provisions to the creation of material elements. Its mission in life is to contribute to what is necessary is possible.</string>
    <string name="msj_01021">It is a symbol of COOPERATION, coordinating, methodizing and concordant element. It imparts power to harmonize, ductility of mind, interest in usefulness, softness in ways and desire to serve. Demands congeniality, sagacity, understanding, cordiality, attention to detail, patience and complacency. The secret yearning of these natives tends to develop their own sufficiency in a way that harmonizes the opposite factors, favors concordance and contributes to the happiness of the people with whom they live or relate. They effectively carry out any work that requires adaptation, effective association of ideas and a comprehensive spirit.</string>
    <string name="msj_01022">Natural Talent: It is related to the Moon. It is a symbol of the Possibility, a principle that urges to harmonize the opposite factors that concur to the same act. In the spiritual it gives balance to the emotions. In the mental order the association of ideas. In the physical it regulates the cooperation of the effort. In the mundane it imparts transcendence to the acts. It gives the person tact, understanding, analytical spirit, ability to acquire knowledge, practicality and tendency to harmonize, justify and serve. Your progress depends on how you apply your adaptive qualities to the environment in which you live and to the people with whom you are in contact. His mission in life is to contribute to what is possible is easy.</string>
    <string name="msj_01031">It is a symbol of EXPRESSION, modeling element, harmonizer, resuscitator. It imparts power to manifest, ability to interpret, interest in beauty and emotion to appreciate and declare it. It demands joyful spirit, good sense to judge the values, faith in the ideals that it pursues and an artistic technique to capture them. The secret yearning of these natives tends to develop their own sufficiency in order to crystallize in emotional works the emotional life that boils in the intimacy of their being. They effectively carry out any work that requires emotional capacity, ease of expression and sharpness of ingenuity.</string>
    <string name="msj_01032">Natural Talent: It is related to Jupiter. It is a symbol of Ease, a principle that urges to give form and expression to inner life. In the spiritual it inspires joyful emotions. In the mental it encourages the imagination to create. In the physical it gives stimulus to strive. In the mundane it gives satisfaction for the effort made. It gives the person humorous sense, tact, originality, attachment to family things and liberality. Your progress depends on the generosity with which you make use of the elements you have and the degree to which those elements contribute to the happiness of others. Its mission in life is to contribute to what is easy is concordant.</string>
    <string name="msj_01041">It is a symbol of FOUNDATION, element of construction, reconstruction, duration. It imparts power to build, ability to plan, interest in the economy and persistent effort. Demand expertise, technical aptitude, firmness, authority and control. The secret yearning of these natives tends to develop their own sufficiency in a way that favors the universal economy and translates into practical works of immediate utility. They perform effectively any work that requires method, discipline, positivist sense and perseverance in the effort.</string>
    <string name="msj_01042">Natural Talent: It is related to Uranus. It is a symbol of Concordance, a principle that urges to give intelligible reality to creations. In the spiritual it gives encouragement. In the mental mental concrete images. In the physical it is experience. In the mundane it gives perfection to things. It gives the person analytical mentality, logic, expertise, foresight and practicality. Your progress depends on the skill you display in your work and the economy with which you govern your actions. Its mission in life is to contribute to what is concordant useful.</string>
    <string name="msj_01051">Symbol of DIFFERENTIATION, element of selection, research, experience. It imparts power to inquire, ability to judge, interest in the hidden and the manifested. Demand intense desire to know, serene judgment in judging, freedom of action and discipline in behavior. The secret yearning of these natives tends to learn from their own experience the mysteries of life and translate what they learn in works that contribute to spiritual advancement, especially people of the opposite sex. They effectively perform any work that requires activity, independence of judgment and quick understanding of the nature of others.</string>
    <string name="msj_01052">Natural Talent: It is related to Mercury. It is a symbol of Utility, a principle that urges to give sensible reality to what has been created. In the spiritual, it is volition. In the mental, image. In the physical, momentum. In the mundane, it makes things appetizing. It gives the person a sensitive, receptive, restless, very observant nature, with the ability to perceive what others think before they express it. Your progress depends on the success with which you select your associations and activities. Its mission in life is to contribute to what is useful is convenient.</string>
    <string name="msj_01061">It is a symbol of the OPTION, selector element, aquilator and qualifier. It imparts power to decide, ability to choose, interest in the beautiful, useful and easy and love of all three. It demands discernment, understanding for the transcendence of acts, artistic taste and restraint in impulses. The secret yearning of these natives tends to develop their own sufficiency so that it translates into useful and beautiful works that contribute to improving the social life and charm of homes. They effectively perform any work that requires conciliatory spirit, desire for stability, preference for things of education and taste for the ornament.</string>
    <string name="msj_01062">Natural Talent: It is related to Venus. It is a symbol of Convenience, a principle that urges to determine behavior. In the spiritual, it inclines the spirit towards what is proper. In the mental, it gives insight. In the physical, opportunity to choose. In the mundane, it gives ornament to things. It gives the person devotion, observer spirit, feelings attached to life in common and ability to perform the tasks entrusted to him or the responsibilities he assumes. Your progress depends on the loyalty with which you persevere in achieving what is proposed. Its mission in life is to contribute to the convenience of being pleasant.</string>
    <string name="msj_01071">It is a symbol of SUPERATION, element of diversity, elucidation, exaltation. It imparts power to overcome the effort, ability to exceed past achievements, interest in knowing the hidden part of things and love of the unknown. Demand interior lighting, serenity of spirit, refined taste and conciliatory spirit. The secret yearning of the natives tends to acquire science, develop one\'s sufficiency so that it translates into acquired works the acquired science and unravels deeper mysteries every day. They effectively carry out any work that requires inspiration, fidelity, mental identification and desire for perfection in details.</string>
    <string name="msj_01072">Natural Talent: It is related to Neptune. It is a symbol of Agrado, a principle that urges the orientation of the effort. In the spiritual, it gives intuition. In the mental, communicates sufficiency. In the physical, it imparts aptitude. In the mundane, it makes things appetizing. It gives the person independent criteria, authority, loyalty, reserve, love of scientific methods and a constant desire to surpass themselves and improve as much as they are concerned. Its progress depends on the degree to which it manages to perfect its regime of life and give transcendence to its work. His mission in life is that the pleasant be profitable.</string>
    <string name="msj_01081">Symbol of STABILITY, element of permanence, association, cooperation. It imparts power to specify ideas in practical works, ability to effectively distribute natural elements, interest in technical advances and love for the creations of the intellect. Demand tolerance, distribution in justice, forecast, confidence in time and sense of proportion. The secret yearning of the natives tends to plan big, develop their own sufficiency so that it translates into lasting achievements and utilize what they own in new businesses. They can effectively perform any work that requires tact, calculation, executive aptitude and desire for expansion.</string>
    <string name="tonicOfTheDay">Tonic of the day</string>
    <string name="hermetic_astrologic">Hermetic Astrologic</string>
    <string name="msj_05">Kabbalah of the Year</string>
</resources>